tests/paczka1/fuzzy1/75940805.err
Error in line 1: KsgLonRV A946 50,5
Error in line 6: 40Mx A946 28,1
Error in line 22: 1GqOsaIYA946214,6
Error in line 19: 40Mx S564 101,5
Error in line 28: 40Mx A927 139,7
Error in line 34: 40Mx S810 38,0
Error in line 16: 1GqOsaIY A946 74,0
Error in line 38: 1GqOsaIY S564 67,0
